k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  selector:
    app: flask
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
